# napoln

./: .coverage  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLI-REDESIGN.md  CONTRIBUTING.md  PROMPT.md  README.md  SPEC.md  STORIES.md  justfile  pyproject.toml  release-please-config.json  skills-lock.json
.github/workflows/: ci.yml  pr-title.yml  release.yml
docs/specs/: 2026-04-25-enable-command.md
docs/superpowers/plans/: 2026-04-22-code-review-diverge-critique-converge.md  2026-04-25-enable-command.md  2026-04-28-bdd-consolidation-and-unit-tests.md
docs/superpowers/reviews/: 2026-04-22-code-review.md  2026-04-29-branch-audit-bdd-consolidation.md
src/napoln/: __init__.py  cli.py  errors.py  output.py  prompts.py  telemetry.py
tests/: conftest.py
tests/features/: add.feature  config.feature  first_run.feature  garbage_collection.feature  health_check.feature  init.feature  install.feature  list.feature  remove.feature  setup.feature  status_and_diff.feature  sync.feature  upgrade.feature
tests/integration/: test_cli.py
tests/steps/: conftest.py  test_config.py  test_first_run.py  test_garbage_collection.py  test_health_check.py  test_init.py  test_install.py  test_list.py  test_remove.py  test_setup.py  test_status_diff.py  test_sync.py  test_upgrade.py
tests/unit/: test_add_logic.py  test_agents.py  test_config_logic.py  test_enable.py  test_hasher.py  test_linker.py  test_list_logic.py  test_manifest.py  test_merger.py  test_naming.py  test_remove_logic.py  test_resolve_and_store.py  test_resolver.py  test_store.py  test_validator.py
(+32 files in other folders)
