[project]
name = "napoln"
version = "0.2.4"
description = "A package manager for agent skills"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "tomli-w>=1.2",
    "httpx>=0.28",
    "reflink>=0.2.2",
    "pyyaml>=6.0",
    "questionary>=2.1.1",
]

[project.scripts]
napoln = "napoln.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/napoln"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-bdd>=8.1",
    "pytest-cov>=7.1",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
